--- a/02-effects_def.Rmd
+++ b/02-effects_def.Rmd
@@ -155,7 +155,7 @@ ID: Kara, I copied what I had written below, feel free to reuse
 
 Consider the following directed acyclic graph.
 
-```{r, engine="tikz", fig.cap = "Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment", fig.ext = "pdf", echo = FALSE}
+```{r, engine="tikz", fig.cap = "Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", echo = FALSE}
 \dimendef\prevdepth=0
 \pgfdeclarelayer{background}
 \pgfsetlayers{background,main}
