--- a/02-effects-def.Rmd
+++ b/02-effects-def.Rmd
@@ -6,7 +6,9 @@
 
 ## Controlled direct effects
 
-$$  \psi_{\text{CDE}} = \E(Y_{1,m}) - \E(Y_{0,m}) $$
+\begin{equation*}
+  \psi_{\text{CDE}} = \E(Y_{1,m}) - \E(Y_{0,m})
+\end{equation*}
 
 - Set $M=m$ uniformly for everyone in the population
 - Compare $A=1$ vs $A=0$ with $M=m$ fixed
@@ -17,8 +19,8 @@ $$  \psi_{\text{CDE}} = \E(Y_{1,m}) - \E(Y_{0,m}) $$
   + $\P(M = m \mid Z, A=a, W) > 0 \text{  } a.e.$
   + $\P(A=a \mid W) > 0 \text{  } a.e.$
 
-```{r pressure, echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img", "graphic4a3.pdf"))
+```{r pressure, echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "50%", results="asis"}
+knitr::include_graphics(here::here("img", "graphic4a3.png"))
 ```
 
 ### Is this the estimand I want? {-}
@@ -55,8 +57,8 @@ The NDE can also be written as: $\E_W \sum_m \{\E(Y_{1,m} \mid W) -
 - Weighted average of controlled direct effects at each level of $m$.
 - If no interaction between $A$ and $M$ on $Y$, then CDE = NDE.
 
-```{r , echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img", "graphic4a.pdf"))
+```{r , echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "50%", results="asis"}
+knitr::include_graphics(here::here("img", "graphic4a.png"))
 ```
 
 ### Identification assumptions:
@@ -90,12 +92,12 @@ NH: Should we mention cross-world indep and indentifiability issues in RCTs?
 _What if our data structure involves a post-treatment confounder of the
 mediator-outcome relationship (e.g., adherence)?_
 
-```{r , echo=FALSE, fig.cap="", out.width = '20%'}
-knitr::include_graphics(here::here("img", "medDAG2.pdf"))
+```{r , echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "75%", results="asis"}
+knitr::include_graphics(here::here("img", "medDAG2.png"))
 ```
 
-```{r , echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img", "ctndag.pdf"))
+```{r , echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "100%", results="asis"}
+knitr::include_graphics(here::here("img", "ctndag.png"))
 ```
 
 ## Interventional direct/ indirect effects {-}
@@ -116,8 +118,8 @@ knitr::include_graphics(here::here("img", "ctndag.pdf"))
  + Can you think of an example when you would want the conditional versions?
    Marginal versions?
 
-```{r , echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img", "graphic4b.pdf"))
+```{r , echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "50%", results="asis"}
+knitr::include_graphics(here::here("img", "graphic4b.png"))
 ```
 
 ### Identification assumptions:
@@ -136,18 +138,13 @@ Is this the estimand I want?
 
 ## Estimand Summary {-}
 
-```{r , echo=FALSE, fig.cap="", out.width = '100%'}
-knitr::include_graphics(here::here("img", "table1.pdf"))
+```{r , echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "125%", results="asis"}
+knitr::include_graphics(here::here("img", "table1.png"))
 ```
-
-
-
-
 
 <!--
 ID: Kara, I copied what I had written below, feel free to reuse
 -->
-
 
 # The Interventional Direct and Indirect Effects {#interventional}
 
