--- a/03-how-to-choose.Rmd
+++ b/03-how-to-choose.Rmd
@@ -2,15 +2,15 @@
 
 ## Comparative effectivness of two medications for opioid use disorder (OUD)
 
-```{r pressure, echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img", "ctndag.pdf"))
+```{r pressure, echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "100%", results="asis"}
+knitr::include_graphics(here::here("img", "ctndag.png"))
 ```
 
 _Motivation_: Opposite overall treatment effects for homeless versus
 nonhomeless participants.
 
-```{r , echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img", "tmleesttotal.pdf"))
+```{r , echo=FALSE, fig.cap="", fig.ext=if (knitr:::is_latex_output()) "pdf" else "png", out.width = "50%", results="asis"}
+knitr::include_graphics(here::here("img", "tmleesttotal.png"))
 ```
 
 ### Getting specific about the question
