--- a/index.Rmd
+++ b/index.Rmd
@@ -11,8 +11,8 @@ fontsize: '12pt, krantz2'
 monofontoptions: "Scale=0.7"
 link-citations: yes
 colorlinks: yes
-lot: yes
-lof: yes
+lot: no
+lof: no
 always_allow_html: yes
 url: 'https\://code.nimahejazi.org/ser2021_mediation_workshop/'
 github-repo: nhejazi/ser2021_mediation_workshop
