nhejazi published a site update

--- a/ser2021mediation.tex
+++ b/ser2021mediation.tex
@@ -227,7 +227,7 @@
 
 {
 \hypersetup{linkcolor=}
-\setcounter{tocdepth}{1}
+\setcounter{tocdepth}{2}
 \tableofcontents
 }
 \listoftables
@@ -629,8 +629,7 @@ model.
 \end{figure}
 
 \hypertarget{is-this-the-estimand-i-want}{%
-\subsection*{Is this the estimand I want?}\label{is-this-the-estimand-i-want}}
-
+\subsection{Is this the estimand I want?}\label{is-this-the-estimand-i-want}}
 
 \begin{itemize}
 \tightlist
@@ -659,8 +658,7 @@ mediator?}
 \emph{What if we want to decompose the average treatment effect into its direct and indirect counterparts?}
 
 \hypertarget{natural-direct-and-indirect-effects}{%
-\section*{Natural direct and indirect effects}\label{natural-direct-and-indirect-effects}}
-
+\section{Natural direct and indirect effects}\label{natural-direct-and-indirect-effects}}
 
 Natural direct effect (NDE):
 \[  \psi_{\text{NDE}} = \E(Y_{1,M_0}) - \E(Y_{0,M_0}) \]
@@ -755,9 +753,8 @@ mediator-outcome relationship (e.g., adherence)?}
 
 \end{figure}
 
-\hypertarget{interventional-direct-indirect-effects}{%
-\section*{Interventional direct/ indirect effects}\label{interventional-direct-indirect-effects}}
-
+\hypertarget{interventional-indirect-effects}{%
+\section{Interventional (in)direct effects}\label{interventional-indirect-effects}}
 
 \begin{itemize}
 \tightlist
@@ -818,8 +815,7 @@ Is this the estimand I want?
 \end{itemize}
 
 \hypertarget{estimand-summary}{%
-\section*{Estimand Summary}\label{estimand-summary}}
-
+\section{Estimand Summary}\label{estimand-summary}}
 
 \begin{figure}
 
