--- a/05-estimation-natural-interventional.Rmd
+++ b/05-estimation-natural-interventional.Rmd
@@ -4,36 +4,107 @@
 
 Recall:
 
-```{r dag1, echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img", "meddagnoz.pdf"))
+```{tikz, fig.cap = "Directed acylcic graph under *no intermediate confounders* of the mediator-outcome relation affected by treatment", fig.ext = 'png', cache = TRUE, echo = FALSE}
+\dimendef\prevdepth=0
+\pgfdeclarelayer{background}
+\pgfsetlayers{background,main}
+\usetikzlibrary{arrows,positioning}
+\tikzset{
+>=stealth',
+punkt/.style={
+rectangle,
+rounded corners,
+draw=black, very thick,
+text width=6.5em,
+minimum height=2em,
+text centered},
+pil/.style={
+->,
+thick,
+shorten <=2pt,
+shorten >=2pt,}
+}
+\newcommand{\Vertex}[2]
+{\node[minimum width=0.6cm,inner sep=0.05cm] (#2) at (#1) {$#2$};
+}
+\newcommand{\VertexR}[2]
+{\node[rectangle, draw, minimum width=0.6cm,inner sep=0.05cm] (#2) at (#1) {$#2$};
+}
+\newcommand{\ArrowR}[3]
+{ \begin{pgfonlayer}{background}
+\draw[->,#3] (#1) to[bend right=30] (#2);
+\end{pgfonlayer}
+}
+\newcommand{\ArrowL}[3]
+{ \begin{pgfonlayer}{background}
+\draw[->,#3] (#1) to[bend left=45] (#2);
+\end{pgfonlayer}
+}
+\newcommand{\EdgeL}[3]
+{ \begin{pgfonlayer}{background}
+\draw[dashed,#3] (#1) to[bend right=-45] (#2);
+\end{pgfonlayer}
+}
+\newcommand{\Arrow}[3]
+{ \begin{pgfonlayer}{background}
+\draw[->,#3] (#1) -- +(#2);
+\end{pgfonlayer}
+}
+\begin{tikzpicture}
+  \Vertex{-4, 0}{W}
+  \Vertex{0, 0}{M}
+  \Vertex{-2, 0}{A}
+  \Vertex{2, 0}{Y}
+  \Arrow{W}{A}{black}
+  \Arrow{A}{M}{black}
+  \Arrow{M}{Y}{black}
+  \ArrowL{W}{Y}{black}
+  \ArrowL{A}{Y}{black}
+  \ArrowL{W}{M}{black}
+\end{tikzpicture}
 ```
 
 Assuming a binary $A$, we define the natural direct effect as:
-$$NDE = E(Y_{1,M_{0}}) - E(Y_{0,M_{0}})$$,
+$$NDE = E(Y_{1,M_{0}} - Y_{0,M_{0}})$$,
 
 and the natural indirect effect as:
-$$NIE = E(Y_{1,M_{1}}) - E(Y_{1,M_{0}})$$.
+$$NIE = E(Y_{1,M_{1}} - Y_{1,M_{0}})$$.
 
 ### Simple case for intuition
 
-$O=(W, A, M, Y)$
+The observed data is
+\[O=(W, A, M, Y)\]
 
 This SCM is represented in the above DAG and the following causal models:
-$W=f(U_W)$, $A=f(W,U_A)$, $M=f(A, W,U_M)$, and $Y=f(M,A,W,U_Y)$, where ($U_W,
-U_A,U_M, U_Y$) are exogenous random errors.
+\[
+\begin{align*}
+W & = f_W(U_W)\\
+A & = f_A(W, U_A)\\
+M & = f_M(W, A, U_M)\\
+Y & = f_Y(W, A, M, U_Y),
+\end{align*}
+\]
+where $(U_W, U_A,U_M, U_Y)$ are exogenous random errors.
 
-We assume $A$ is a single binary randomized treatment, $M$ is a single binary
-mediator. There are no restrictions on the distribution of $W$ or $Y$.
+We assume
+- $A$ is a single binary randomized treatment (and thus $A & = f_A(U_A)$)
+- $M$ is a single binary mediator
+- There are no restrictions on the distribution of $W$ or $Y$
 
 Recall that we need to assume the following to identify the above caual effects
 from our observed data:
+
 - $A \indep Y_{a,m} \mid W$
 - $M \indep Y_{a,m} \mid W, A$
 - $A \indep M_a \mid W$
-- $M_{a^{\star}} \indep Y_{a,m} \mid W$
+- $M_0 \indep Y_{1,m} \mid W$
 - and positivity assumptions
 
 ### How to estimate using g-computation
+
+<!--
+ID: Should we add the g-computation formula here?
+-->
 
 Let's take the NDE as an example:
 
@@ -48,6 +119,10 @@ Let's take the NDE as an example:
 ### How to estimate using the doubly robust methods that rely on the EIF
 
 The EIC for the NDE ($\Psi_{NDE}$) is given by:
+
+<!--
+ID: I'd suggest using the notation in our biometrika paper for the below
+-->
 
 \begin{align}
     D^{\star} &= \bigg\{ \frac{I(A=1)}{g(1|W)}\frac{Q(M|W,0)}{Q(M|W,1)} -
@@ -178,34 +253,105 @@ tmlende <- mean(margqdiff)
 
 ## Interventional direct and indirect effects
 
-Recall:
+Recall that in the presence of a intermediate confounder natural (in)direct effects are not identified
 
-```{r dag2, echo=FALSE, fig.cap="", out.width = '50%'}
-knitr::include_graphics(here::here("img", "medDAG2.pdf"))
+```{tikz, fig.cap = "Directed acylcic graph under intermediate confounders of the mediator-outcome relation affected by treatment", fig.ext = 'png', cache = TRUE, echo = FALSE}
+\dimendef\prevdepth=0
+\pgfdeclarelayer{background}
+\pgfsetlayers{background,main}
+\usetikzlibrary{arrows,positioning}
+\tikzset{
+>=stealth',
+punkt/.style={
+rectangle,
+rounded corners,
+draw=black, very thick,
+text width=6.5em,
+minimum height=2em,
+text centered},
+pil/.style={
+->,
+thick,
+shorten <=2pt,
+shorten >=2pt,}
+}
+\newcommand{\Vertex}[2]
+{\node[minimum width=0.6cm,inner sep=0.05cm] (#2) at (#1) {$#2$};
+}
+\newcommand{\VertexR}[2]
+{\node[rectangle, draw, minimum width=0.6cm,inner sep=0.05cm] (#2) at (#1) {$#2$};
+}
+\newcommand{\ArrowR}[3]
+{ \begin{pgfonlayer}{background}
+\draw[->,#3] (#1) to[bend right=30] (#2);
+\end{pgfonlayer}
+}
+\newcommand{\ArrowL}[3]
+{ \begin{pgfonlayer}{background}
+\draw[->,#3] (#1) to[bend left=45] (#2);
+\end{pgfonlayer}
+}
+\newcommand{\EdgeL}[3]
+{ \begin{pgfonlayer}{background}
+\draw[dashed,#3] (#1) to[bend right=-45] (#2);
+\end{pgfonlayer}
+}
+\newcommand{\Arrow}[3]
+{ \begin{pgfonlayer}{background}
+\draw[->,#3] (#1) -- +(#2);
+\end{pgfonlayer}
+}
+\begin{tikzpicture}
+  \Vertex{0, -1}{Z}
+  \Vertex{-4, 0}{W}
+  \Vertex{0, 0}{M}
+  \Vertex{-2, 0}{A}
+  \Vertex{2, 0}{Y}
+  \ArrowR{W}{Z}{black}
+  \Arrow{Z}{M}{black}
+  \Arrow{W}{A}{black}
+  \Arrow{A}{M}{black}
+  \Arrow{M}{Y}{black}
+  \Arrow{A}{Z}{black}
+  \Arrow{Z}{Y}{black}
+  \ArrowL{W}{Y}{black}
+  \ArrowL{A}{Y}{black}
+  \ArrowL{W}{M}{black}
+\end{tikzpicture}
 ```
+
+<!--
+ID: I suggest using the Y_{a, G_a'} notation I used in the other page to define these effects
+-->
 
 We define the interventional direct effect as:
 \begin{equation*}
-  \psi_{\text{PIDE}} = \E(Y_{a^\prime,g_{M \mid a^\star,W}}) -
-    \E(Y_{a\star,g_{M \mid a^\star,W}}),
+  \psi_{\text{PIDE}} = \E(Y_{a^\prime,g_{M \mid a^\star,W}} -
+    Y_{a\star,g_{M \mid a^\star,W}}),
 \end{equation*}
+
 and the interventional indirect effect as:
+
 \begin{equation*}
-  \psi_{\text{PIIE}} = \E(Y_{a^\prime,g_{M \mid a^\prime,W}}) -
-    \E(Y_{a^\prime,g_{M \mid a^\star,W}}).
+  \psi_{\text{PIIE}} = \E(Y_{a^\prime,g_{M \mid a^\prime,W}} -
+    Y_{a^\prime,g_{M \mid a^\star,W}}).
 \end{equation*}
 
 ## Simple case for intuition
 
 Consider a simple data structure $O=(W, A, Z, M, Y)$. This SCM is represented in
 the above DAG and the following causal models:
+
+\[
 \begin{align*}
-  W &= f(U_W)\\
-  A &= f(U_A)\\
-  Z &= f(A, W, U_Z)\\
-  M &= f(Z, A, W, U_M)\\
-  Y &= f(M, Z, A, W, U_Y),
+W & = f_W(U_W)\\
+A & = f_A(W, U_A)\\
+Z & = f_Z(W, A, U_Z)\\
+M & = f_M(W, A, Z, U_M)\\
+Y & = f_Y(W, A, Z, M, U_Y)
 \end{align*}
+\]
+
 where ($U_W, U_A, U_Z, U_M, U_Y$) are exogenous random errors. We assume $A$ is
 a single binary treatment, $Z$ is a single binary intermediate confounder, $M$
 is a single binary mediator. There are no restrictions on the distribution of
@@ -214,10 +360,20 @@ $W$ or $Y$.
 $g_{M \mid a^\prime,W}$ represents a stochastic draw from the counterfactual,
 conditional distribution of $M$, as described by
 @vanderweele2016mediation:
+
+<!--
+ID: The below is not a stochastic draw, it is the distribution that you are drawing from. Also, not sure about that last equality, isn't that just part of the identification strategy, of which we have not talked about? Probably confusing to put that in here.
+-->
+
 \begin{equation*}
   g_{M \mid A,W}(m, a^{\star}, W) \equiv g_{M \mid a^{\star}, W}(W) =
     \sum_{z=0}^1 \P(M=1 \mid Z=z,W) \P(Z=z \mid A=a^{\star}, W).
 \end{equation*}
+
+<!--
+ID: Why would we make the below assumption if we have estiamtors that do not require it? It will probably just confuse people to say that we make this assumption and then have software that does not make that assumption
+-->
+
 In what follows, we are going to assume that $g_{M \mid A,W}(m, a^{\star}, W)$
 is known, estimated from observed data, which we call
 $\hat{g}_{M \mid a^{\star}, W}$. This is going to slightly alter the usual
